# new_trade_system

./: .gitignore  README.md  backfill_factors.py  pyproject.toml  recompute_factors.py  run_backtest.py  交易策略说明_2026_0402_2317.md  阶段性设计-实现对比2026_0401_2230.md
docs/: 2026-03-26-a-stock-trading-system-design.md  2026-03-29-factor-engine-plan.md  2026-03-29-layer3-strategy-plan.md  2026-03-29-project-status-summary.md  2026-04-11-design-vs-implementation-gap-analysis.md  2026-04-12-finance-db-data-requirements.md  2026-04-12-finance-public-opinion-db-data-requirements.md  2026-04-14-version-history.md  finance-db-new-data-requirements.md  finance-public-opinion-db-new-data-requirements.md  valuation_data_backfill_requirement.md
docs/backtest_report/: 00_summary.md  01_mvp_completion.md  02_backtest_framework_fixes.md  03_3yr_backtest_results.md  04_data_gaps_and_next_steps.md  05_systematic_summary_and_analysis.md
docs/paper-trading/: 01-系统概述与架构.md  (+4 more)
scripts/: backfill_new_factors.py  calc_factors.py  eval_factors.py  gen_signals.py  init_db.py  register_task.ps1  run_backtest.py  run_daily.py  run_trading_daily.bat
tests/: conftest.py  test_backtest.py  test_base_strategy.py  test_data_loader.py  test_db_model.py  test_fundamental.py  test_growth_strategy.py  test_market_state.py  test_momentum_strategy.py  test_money_flow.py  test_orchestrator.py  test_registry.py  test_risk_execution.py  test_signal_generator.py  test_signal_model.py  test_signal_writer.py  test_standardizer.py  test_technical.py  test_value_strategy.py  test_writer.py
trading_system/: config.py
(+60 files in other folders)
